--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ fabric.properties
 composer.phar
 /vendor/
 src/Model/DbManager.php
+src/Service/Login.php
 
 # Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
