--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         }
     },
     "require": {
-        "phpmailer/phpmailer": "^6.0"
+        "phpmailer/phpmailer": "^6.0",
+        "tinymce/tinymce": "^5.0"
     }
 }
