--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     },
     "require": {
         "phpmailer/phpmailer": "^6.0",
-        "tinymce/tinymce": "^5.0"
+        "tinymce/tinymce": "^5.0",
+        "twbs/bootstrap": "4.3.1"
     }
 }
